# bank_projekt

./: .coverage  .evn.example  .flake8  .gitignore  README.md  main.py  my_log.txt  mylog.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  my_log.txt  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
